<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment"
    android:background="@color/merahDasar">

    <LinearLayout
        android:id="@+id/lin_profile_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:src="@drawable/me">
        </de.hdodenhof.circleimageview.CircleImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Muiz Ahsanu Haqi"
            android:textSize="24sp"
            android:textColor="@color/whiteSecond">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="220dp"
            android:textAlignment="center"
            android:text="Saya adalah mahasiswa di Universitas Komputer Indonesia yang bercita-cita menjadi Software Developers. Saya seorang perfectionist dan selalu negative thinking"
            android:textSize="14sp"
            android:textColor="#99DEDEDE">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:elevation="8dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lin_profile_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_interestJudul_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Interest"
                    android:textColor="@color/whiteSecond"
                    android:textSize="28sp"
                    android:layout_marginEnd="8dp">
                </TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/whiteSecond">
                </View>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/merahKedua"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_hobi_home"
                android:layout_marginBottom="4dp"
                android:textColor="@color/whiteSecond"
                android:textSize="24sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_isi_hobi_home"
                android:textColor="#99FFFBE7"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_makanan_home"
                android:layout_marginBottom="4dp"
                android:textColor="@color/whiteSecond"
                android:textSize="24sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_isiMakanan_home"
                android:textColor="#99FFFBE7"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/merahKedua"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_minuman_home"
                android:layout_marginBottom="4dp"
                android:textColor="@color/whiteSecond"
                android:textSize="24sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_isiMinuman_home"
                android:textColor="#99FFFBE7"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_interst_home"
                android:layout_marginBottom="4dp"
                android:textColor="@color/whiteSecond"
                android:textSize="24sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_isiInterest_home"
                android:textColor="#99FFFBE7"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/merahKedua"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_citacita_home"
                android:layout_marginBottom="4dp"
                android:textColor="@color/whiteSecond"
                android:textSize="24sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_isiCitaCita_home"
                android:textColor="#99FFFBE7"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>